# AdvTopicsEX1

./: .clang-format  .gitignore  CMakeLists.txt  bonus.txt  readme.md  run.sh
input/: house_a.house  house_b.house  input.txt  input_a.txt  input_b.txt  input_c.txt  test_input_b.txt  test_input_c.txt
output/: cleaned_input.txt  log1.txt  log2.txt  log3.txt  moves.txt  output_a.txt  output_b.txt
scripts/: multi_vis.py  run.ps1  run.sh  run_visualization.sh  test.sh  visualize_map.py
src/algorithm/: AlgorithmRegistration.h  CMakeLists.txt  abstract_algorithm.h  algorithm.cpp  algorithm.h  expanding_map.cpp  expanding_map.h  relative_point.h  smart_algorithm.cpp  smart_algorithm.h  stupid_algorithm.cpp  stupid_algorithm.h
src/common/: AlgorithmRegistrar.h  AlgorithmRegistration.h  CMakeLists.txt  abstract_algorithm.h  pathing.h
src/common/sensors/: CMakeLists.txt  sensors.cpp  sensors.h
src/common/utils/: CMakeLists.txt  logger.h
src/config/: CMakeLists.txt  config.cpp  config.h  layout_point.h  tile.h
src/main/: CMakeLists.txt  main.cpp
src/map/: CMakeLists.txt  map.cpp  map.h
src/robot/: CMakeLists.txt  my_simulator.h  robot.cpp  robot.h  sensors.cpp  sensors.h  step_info.h
src/sensors/: CMakeLists.txt  sensors.cpp
src/simulator/: AlgorithmRegistrar.cpp  CMakeLists.txt  main.cpp  main_utils.h  my_simulator.h  robot.cpp  robot.h  step_info.h
src/simulator/config/: config.cpp  config.h
src/smart_map/: CMakeLists.txt  graph.cpp  graph.h  smart_map.h
src/smarter_algorithm/: CMakeLists.txt  SDFS.cpp  SDFS.h
src/tests/: CMakeLists.txt  algorithm_a_tests.cpp  algorithm_b_tests.cpp  algorithm_tests.cpp  expanding_map_tests.cpp  graph_tests.cpp  input.txt  moves.txt  robot_tests.cpp  sensor_tests.cpp  unit_tests.cpp
src/utils/: CMakeLists.txt  logger.h  relative_point.h  tile.h  utils.h  visualize_map.py
